--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -564,15 +564,20 @@
     width: 40%;
   }
   .hero-lorem {
-    font-size: 16px;
+    font-size: 14px;
     width: 200px;
   }
   .box {
-    width: 110px;
-    top: 35px;
-    left: 11px;
+    width: 97px;
+    top: 52px;
+    left: 2px;
   }
-
+  .elements1{
+    top: 16px;
+  }
+  .elements2{
+    bottom: 15px;
+  }
 }
 @media screen and (max-width: 320px) {
   .schedule-call {
