--- a/src/css/Project.css
+++ b/src/css/Project.css
@@ -141,7 +141,9 @@
 
 @media(max-width: 380px){
    
-
+    .paragh1{
+        width: 280px;
+    }
     .project-img{
         width: 75vw;
         height: 35vh;
